Refaktorering - endrer alle lokale variabelnavn til var for å følge s… (#661)
* Refaktorering - endrer alle lokale variabelnavn til var for å følge standarden ellers.

* optimaliserer imports for å fjerne ubrukte